code25_all/scala/17483814.txt
scala> def composeHandlingFuture[T](fut: Future[T], default: T): Future[T] =
     | fut recover { case e: Exception => default }
<console>:19: error: type mismatch;
 found   : default.type (with underlying type A1 => B1)
 required: T
       fut recover { case e: Exception => default }
                                          ^

default.type
T
type A1 => B1
